Added a new shop

--- a/index.html
+++ b/index.html
@@ -289,33 +289,50 @@
 
                     </a>
 
-                    <a href="#" class="square">
+                    <a href="shop-3.html" class="square">
                         <div class="slick_img"><img src="./assets/images/Shop/10530943-6634663400582052.jpg"></div>
-                        <h6>FiraCode Gold Fitness</h6>
-                        <div class="slick_text">Гейнер</div>
-                        <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
+                        <h6>Impact Whey Protein</h6>
+                        <div class="slick_text">Протеин</div>
+                        <div class="about_product"> Первоклассная сыворотка, порция . . .</div>
 
                     </a>
-                    <a href="#" class="square">
-                        <div class="slick_img"><img src="./assets/images/blog/1.jpg"></div>
-                        <h6>FiraCode Gold Fitness</h6>
-                        <div class="slick_text">Гейнер</div>
-                        <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
+                    <a href="shop-4.html" class="square">
+                        <div class="slick_img"><img
+                                src="./assets/images/Shop/10530050-9574620647469231.jpg">
+                        </div>
+                        <h6>Creatine Monohydrate</h6>
+                        <div class="slick_text">Креатин</div>
+                        <div class="about_product"> Наш эффективный порошок является . . .</div>
 
                     </a>
-                    <a href="#" class="square">
-                        <div class="slick_img"><img src="./assets/images/blog/2.jpg"></div>
-                        <h6>FiraCode Gold Fitness</h6>
-                        <div class="slick_text">Гейнер</div>
-                        <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
+                    <a href="shop-5.html" class="square">
+                        <div class="slick_img"><img src="./assets/images/Shop/scivation-xtend-bcaa-s-2596665327728_480x480.jpg"></div>
+                        <h6>XTEND BCAA'S</h6>
+                        <div class="slick_text">BCAA</div>
+                        <div class="about_product"> Scivation Xtend – мощный комплекс BCAA . . .</div>
 
                     </a>
-                    <a href="#" class="square">
-                        <div class="slick_img"><img src="./assets/images/blog/3.jpg"></div>
-                        <h6>FiraCode Gold Fitness</h6>
-                        <div class="slick_text">Гейнер</div>
+                    <a href="shop-6.html" class="square">
+                        <div class="slick_img"><img src="./assets/images/Shop/Essentials_BCAA_30serve_caps_grande.jpg "></div>
+                        <h6>BCAA 3:2:1</h6>
+                        <div class="slick_text">BCAA
+                        </div>
                         <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
                     </a>
+                    <a href="shop-7.html" class="square">
+                            <div class="slick_img"><img src="./assets/images/Shop/5f70ed68ae09ee77a0e30e0825c4b476.jpg"></div>
+                            <h6>Asia Black</h6>
+                            <div class="slick_text">Жиросжигатель
+                            </div>
+                            <div class="about_product"> Действующим веществом жиросжигателя Asia . . .</div>
+                        </a>
+                        <a href="shop-8.html" class="square">
+                                <div class="slick_img"><img src="./assets/images/Shop/387546_1.jpg"></div>
+                                <h6>Syntha-6</h6>
+                                <div class="slick_text">Протеин
+                                </div>
+                                <div class="about_product"> Комбинированная биодобавка Синта-6 . . .</div>
+                            </a>
                 </div>
             </div>
         </div>
