--- a/shop-4.html
+++ b/shop-4.html
@@ -127,13 +127,12 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="./assets/images/Shop/10530943-6634663400582052.jpg"
-                        class="imgShop">
+                    <img src="./assets/images/Shop/10530050-9574620647469231.jpg" class="imgShop">
                 </div>
                 <div class="col-md-8">
 
                     <div class="head">
-                        <h1>Impact Whey Protein</h1>
+                        <h1>Creatine Monohydrate</h1>
                     </div>
                     <div class="row combain">
                         <div class="col-md-6">
@@ -166,20 +165,25 @@
 
                     <div class="text">
                         <p class="text-center"><strong>Описание</strong></p>
-                        <p>Первоклассная сыворотка, каждая порция которой содержит 21 г белка (для варианта без вкусовых
-                            добавок), обеспечит организм необходимым белком, полученным из качественного источника — из
-                            того же коровьего молока, из которого производятся молочные продукты на вашем столе. Продукт
-                            подвергается естественной фильтрации и распылительной сушке, что делает возможным
-                            производство полностью натуральной пищевой добавки.
-                            Удобный в применении протеин отличного качества, помогает набирать и поддерживать
-                            необходимый объем мышечной массы1. Этот продукт, одна порция которого содержит 1,9 г жира, 1
-                            г углеводов и всего 103 калории, станет отличным помощником в достижении ваших спортивных
-                            целей.<br><br><span class="other">
+                        <p>Наш эффективный порошок является одной из самых изучаемых в мире форм креатина. Научно
+                            доказано, что она повышает физическую результативность1, улучшая общие возможности
+                            организма.Поступление креатина из пищи, такой как мясо и рыба, может оказаться
+                            затруднительным, поскольку вам требуется достаточно большой объем. Наше решение позволяет
+                            восполнить потребность быстро и удобно.
+                            Поступление креатина из пищи, такой как мясо и рыба, может оказаться затруднительным,
+                            поскольку вам требуется достаточно большой объем. Наше решение позволяет восполнить
+                            потребность быстро и удобно.
+
+                            Наша повышающая общие возможности организма1 пищевая добавка с креатинмоногидратом подходит
+                            абсолютно всем — она помогает улучшить результаты тренировок в зале, на беговой дорожке и на
+                            поле.
+                            <br><br><span class="other">
                                 Ключевые преимущества:
                             </span>
-                            В одной порции содержится 21 г белка (для варианта без вкусовых добавок)
-                            4,5 г кислот BCAA
-                            Низкий уровень содержания сахара.</p>
+                            Доказанное улучшение физической результативности1
+                            Способен улучшать возможности организма1
+                            Удобная пищевая добавка на каждый день
+                            Отлично подходит для всех видов спорта и нагрузок</p>
                     </div>
                 </div>
             </div>
