--- a/shop-5.html
+++ b/shop-5.html
@@ -127,24 +127,23 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="./assets/images/Shop/10530943-6634663400582052.jpg"
-                        class="imgShop">
+                    <img src="./assets/images/Shop/scivation-xtend-bcaa-s-2596665327728_480x480.jpg" class="imgShop">
                 </div>
                 <div class="col-md-8">
 
                     <div class="head">
-                        <h1>Impact Whey Protein</h1>
+                        <h1>Xtend Bcaa's</h1>
                     </div>
                     <div class="row combain">
                         <div class="col-md-6">
                             <div class="margin-top">
                                 Производитель:
-                                <a href="https://www.myprotein.ru/" target="_blank">MyProtein</a>
+                                <a href="https://officialxtend.com/" target="_blank">XTEND</a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <img src="assets/images/Shop/usa.svg" class="flagShop">
-                            Russia
+                            United States
                         </div>
                     </div>
                     <div class="row combain margin-top">
@@ -166,20 +165,19 @@
 
                     <div class="text">
                         <p class="text-center"><strong>Описание</strong></p>
-                        <p>Первоклассная сыворотка, каждая порция которой содержит 21 г белка (для варианта без вкусовых
-                            добавок), обеспечит организм необходимым белком, полученным из качественного источника — из
-                            того же коровьего молока, из которого производятся молочные продукты на вашем столе. Продукт
-                            подвергается естественной фильтрации и распылительной сушке, что делает возможным
-                            производство полностью натуральной пищевой добавки.
-                            Удобный в применении протеин отличного качества, помогает набирать и поддерживать
-                            необходимый объем мышечной массы1. Этот продукт, одна порция которого содержит 1,9 г жира, 1
-                            г углеводов и всего 103 калории, станет отличным помощником в достижении ваших спортивных
-                            целей.<br><br><span class="other">
-                                Ключевые преимущества:
-                            </span>
-                            В одной порции содержится 21 г белка (для варианта без вкусовых добавок)
-                            4,5 г кислот BCAA
-                            Низкий уровень содержания сахара.</p>
+                        <p>Scivation Xtend – мощный комплекс BCAA аминокислот, обладающий ярко выраженным
+                            антикатаболическим действием. В состав Xtend входят компоненты, давно доказавшие свою
+                            эффективность – BCAA, цитруллин, глютамин и пиридоксин. Большое число положительных
+                            эффектов, среди которых и подавление катаболизма, и улучшение секреции гормона роста, и
+                            ускорение синтеза белка, а также синергический эффект, когда все компоненты усиливают
+                            действие друг друга, делают Xtend (отзывы спортсменов свидетельствуют об этом) лучшим
+                            постренировочником и восстановителем.
+
+                            <br>
+                            Scivation Xtend включает в свой состав лейцин, изолейцин и валин в пропорции 2:1:1, а также
+                            глютамин. Ценность этих аминокислот для спортсменов давно известна. Что же касается еще
+                            одного компонента Xtend – цитруллина малата, то его роль нужно объяснить подробнее.
+                        </p>
                     </div>
                 </div>
             </div>
