--- a/shop-6.html
+++ b/shop-6.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -127,24 +128,23 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="./assets/images/Shop/10530943-6634663400582052.jpg"
-                        class="imgShop">
+                    <img src="./assets/images/Shop/Essentials_BCAA_30serve_caps_grande.jpg" class="imgShop">
                 </div>
                 <div class="col-md-8">
 
                     <div class="head">
-                        <h1>Impact Whey Protein</h1>
+                        <h1>BCAA 3:1:2</h1>
                     </div>
                     <div class="row combain">
                         <div class="col-md-6">
                             <div class="margin-top">
                                 Производитель:
-                                <a href="https://www.myprotein.ru/" target="_blank">MyProtein</a>
+                                <a href="https://musclepharm.com/" target="_blank">MusclePharm</a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <img src="assets/images/Shop/usa.svg" class="flagShop">
-                            Russia
+                            United States
                         </div>
                     </div>
                     <div class="row combain margin-top">
@@ -166,20 +166,20 @@
 
                     <div class="text">
                         <p class="text-center"><strong>Описание</strong></p>
-                        <p>Первоклассная сыворотка, каждая порция которой содержит 21 г белка (для варианта без вкусовых
-                            добавок), обеспечит организм необходимым белком, полученным из качественного источника — из
-                            того же коровьего молока, из которого производятся молочные продукты на вашем столе. Продукт
-                            подвергается естественной фильтрации и распылительной сушке, что делает возможным
-                            производство полностью натуральной пищевой добавки.
-                            Удобный в применении протеин отличного качества, помогает набирать и поддерживать
-                            необходимый объем мышечной массы1. Этот продукт, одна порция которого содержит 1,9 г жира, 1
-                            г углеводов и всего 103 калории, станет отличным помощником в достижении ваших спортивных
-                            целей.<br><br><span class="other">
-                                Ключевые преимущества:
-                            </span>
-                            В одной порции содержится 21 г белка (для варианта без вкусовых добавок)
-                            4,5 г кислот BCAA
-                            Низкий уровень содержания сахара.</p>
+                        <p>Комплекс аминокислот BCAA многие называют самой действенной спортивной добавкой для
+                            тренирующихся людей. Это основной материал для построения мышц, который в организме человека
+                            не синтезируется – то есть получать аминокислоты следует извне — вместе с пищей или в виде
+                            добавок.Уникальное соотношение лейцина-изолейцина-валина от MusclePharm
+                            (МасклФарм).Поддержка роста “сухой” мышечной массы, защита от катаболизма и
+                            увеличение синтеза белка.BCAA являются незаменимыми аминокислотами т.е они не синтезируются
+                            организмом.<br>
+                            <span class="other">BCAA 3:1:2</span>
+                            – это капсулированные аминокислоты БЦАА от компании MusclePharm, отличающиеся
+                            уникальным соотношением незаменимых аминокислот, для более интенсивных, усердных тренировок
+                            и качественного восстановления. BCAA, как известно, - это три незаменимые аминокислоты,
+                            способствующие антикатаболическому действию, сжиганию жира, повышению синтеза белка,
+                            выносливости. В каждой порции БЦАА 3:1:2 содержится 3 грамма лейцина, 1 грамм изолейцина, 2
+                            грамма валина, при этом без добавления сахара и транс жиров. </p>
                     </div>
                 </div>
             </div>
