--- a/shop-8.html
+++ b/shop-8.html
@@ -127,24 +127,23 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="./assets/images/Shop/10530943-6634663400582052.jpg"
-                        class="imgShop">
+                    <img src="./assets/images/Shop/387546_1.jpg" class="imgShop">
                 </div>
                 <div class="col-md-8">
 
                     <div class="head">
-                        <h1>Impact Whey Protein</h1>
+                        <h1>Syntha-6</h1>
                     </div>
                     <div class="row combain">
                         <div class="col-md-6">
                             <div class="margin-top">
                                 Производитель:
-                                <a href="https://www.myprotein.ru/" target="_blank">MyProtein</a>
+                                <a href="https://www.gobsn.com/en-us" target="_blank">BSN</a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <img src="assets/images/Shop/usa.svg" class="flagShop">
-                            Russia
+                            United States
                         </div>
                     </div>
                     <div class="row combain margin-top">
@@ -166,20 +165,20 @@
 
                     <div class="text">
                         <p class="text-center"><strong>Описание</strong></p>
-                        <p>Первоклассная сыворотка, каждая порция которой содержит 21 г белка (для варианта без вкусовых
-                            добавок), обеспечит организм необходимым белком, полученным из качественного источника — из
-                            того же коровьего молока, из которого производятся молочные продукты на вашем столе. Продукт
-                            подвергается естественной фильтрации и распылительной сушке, что делает возможным
-                            производство полностью натуральной пищевой добавки.
-                            Удобный в применении протеин отличного качества, помогает набирать и поддерживать
-                            необходимый объем мышечной массы1. Этот продукт, одна порция которого содержит 1,9 г жира, 1
-                            г углеводов и всего 103 калории, станет отличным помощником в достижении ваших спортивных
-                            целей.<br><br><span class="other">
-                                Ключевые преимущества:
-                            </span>
-                            В одной порции содержится 21 г белка (для варианта без вкусовых добавок)
-                            4,5 г кислот BCAA
-                            Низкий уровень содержания сахара.</p>
+                        <p>Комбинированная биодобавка Синта-6 от бренда BSN состоит из нескольких разновидностей белков
+                            с разной быстротой их утилизации организмом. Препарат относится к самым топовым средствам
+                            спортивного питания, поскольку одной порцией удается решать несколько задач: насытить
+                            мышечные волокна аминокислотами, создать запас питательных компонентов в организме. Синта
+                            удобна как в момент работы над наращиванием мускулатуры, так и в период структурирования
+                            мышц, похудения. Добавка дает возможность сформировать нужный объем мускулатуры без лишнего
+                            жира и блокирует катаболизм.
+                            <br>
+                            Благодаря такому составу мышечная ткань получает комбинацию необходимых для выполнения
+                            задачи питательных веществ, которые расходуются и немедленно и отсрочено, в течение 8 часов.
+                            Это помогает блокировать разрушение мышц, защищает их от последствий чрезмерно интенсивных
+                            усилий. Кроме всего прочего, комплекс насыщен клетчаткой. Она обеспечивает чувство сытости и
+                            помогает скорейшему перевариванию полезных элементов. Состав одной порции биодобавки
+                            представлен в таблице. </p>
                     </div>
                 </div>
             </div>
