--- a/shop-7.html
+++ b/shop-7.html
@@ -127,19 +127,18 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="./assets/images/Shop/10530943-6634663400582052.jpg"
-                        class="imgShop">
+                    <img src="./assets/images/Shop/5f70ed68ae09ee77a0e30e0825c4b476.jpg" class="imgShop">
                 </div>
                 <div class="col-md-8">
 
                     <div class="head">
-                        <h1>Impact Whey Protein</h1>
+                        <h1>Asia Black</h1>
                     </div>
                     <div class="row combain">
                         <div class="col-md-6">
                             <div class="margin-top">
                                 Производитель:
-                                <a href="https://www.myprotein.ru/" target="_blank">MyProtein</a>
+                                <a href="https://clomapharma.ru/" target="_blank">Cloma Pharma</a>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -166,20 +165,17 @@
 
                     <div class="text">
                         <p class="text-center"><strong>Описание</strong></p>
-                        <p>Первоклассная сыворотка, каждая порция которой содержит 21 г белка (для варианта без вкусовых
-                            добавок), обеспечит организм необходимым белком, полученным из качественного источника — из
-                            того же коровьего молока, из которого производятся молочные продукты на вашем столе. Продукт
-                            подвергается естественной фильтрации и распылительной сушке, что делает возможным
-                            производство полностью натуральной пищевой добавки.
-                            Удобный в применении протеин отличного качества, помогает набирать и поддерживать
-                            необходимый объем мышечной массы1. Этот продукт, одна порция которого содержит 1,9 г жира, 1
-                            г углеводов и всего 103 калории, станет отличным помощником в достижении ваших спортивных
-                            целей.<br><br><span class="other">
-                                Ключевые преимущества:
-                            </span>
-                            В одной порции содержится 21 г белка (для варианта без вкусовых добавок)
-                            4,5 г кислот BCAA
-                            Низкий уровень содержания сахара.</p>
+                        <p>Действующим веществом жиросжигателя Asia Black 25 является доказавший свою эффективность и
+                            проверенный временем «Эфедран», кофеин и ивовый экстракт. Будучи термогеником, препарат
+                            стимулирует и разгоняет метаболизм, позволяет организму легче адаптироваться к диетическому
+                            рациону, чувствовать себя хорошо даже при ограниченном рационе питания. 
+                        Основой активной формулы является ЭКА-стек, присутствующий в препарате в количестве 25
+                        миллиграмм. Благодаря экстракту коры ивы, являющейся аналогом аспирина, синтетическому эфедрану
+                        и безводному кофеину, препарат стимулирует нервную систему, способствует концентрации внимания,
+                        помогает получать большую отдачу при занятиях физическими упражнениями, а также ускорить
+                        процессы сжигания жира.
+                        Чтобы усилить эффект от приема жиросжигателя, производитель рекомендует ограничить в рационе
+                        количество углеводов, полностью исключить газированные напитки и фаст-фуд.</p>
                     </div>
                 </div>
             </div>
