--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <ul class="d-flex header-social">
-                                    <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="index.html#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                   <!--  <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="index.html#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                                     <li><a href="https://www.instagram.com/gold_fitness_kg/"><i class="fa fa-instagram"
                                                 aria-hidden="true"></i></a></li>
-                                    <li><a href="index.html#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                                    </li>
+                                   <!--  <li><a href="index.html#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                                    </li> -->
                                 </ul>
                             </div>
 
@@ -297,8 +297,7 @@
 
                     </a>
                     <a href="shop-4.html" class="square">
-                        <div class="slick_img"><img
-                                src="./assets/images/Shop/10530050-9574620647469231.jpg">
+                        <div class="slick_img"><img src="./assets/images/Shop/10530050-9574620647469231.jpg">
                         </div>
                         <h6>Creatine Monohydrate</h6>
                         <div class="slick_text">Креатин</div>
@@ -306,33 +305,46 @@
 
                     </a>
                     <a href="shop-5.html" class="square">
-                        <div class="slick_img"><img src="./assets/images/Shop/scivation-xtend-bcaa-s-2596665327728_480x480.jpg"></div>
+                        <div class="slick_img"><img
+                                src="./assets/images/Shop/scivation-xtend-bcaa-s-2596665327728_480x480.jpg"></div>
                         <h6>XTEND BCAA'S</h6>
                         <div class="slick_text">BCAA</div>
                         <div class="about_product"> Scivation Xtend – мощный комплекс BCAA . . .</div>
 
                     </a>
                     <a href="shop-6.html" class="square">
-                        <div class="slick_img"><img src="./assets/images/Shop/Essentials_BCAA_30serve_caps_grande.jpg "></div>
+                        <div class="slick_img"><img src="./assets/images/Shop/Essentials_BCAA_30serve_caps_grande.jpg ">
+                        </div>
                         <h6>BCAA 3:2:1</h6>
                         <div class="slick_text">BCAA
                         </div>
                         <div class="about_product"> Смесь белковая Gold standard 100% WHEY . . .</div>
                     </a>
                     <a href="shop-7.html" class="square">
-                            <div class="slick_img"><img src="./assets/images/Shop/5f70ed68ae09ee77a0e30e0825c4b476.jpg"></div>
-                            <h6>Asia Black</h6>
-                            <div class="slick_text">Жиросжигатель
-                            </div>
-                            <div class="about_product"> Действующим веществом жиросжигателя Asia . . .</div>
-                        </a>
-                        <a href="shop-8.html" class="square">
-                                <div class="slick_img"><img src="./assets/images/Shop/387546_1.jpg"></div>
-                                <h6>Syntha-6</h6>
-                                <div class="slick_text">Протеин
-                                </div>
-                                <div class="about_product"> Комбинированная биодобавка Синта-6 . . .</div>
-                            </a>
+                        <div class="slick_img"><img src="./assets/images/Shop/5f70ed68ae09ee77a0e30e0825c4b476.jpg">
+                        </div>
+                        <h6>Asia Black</h6>
+                        <div class="slick_text">Жиросжигатель
+                        </div>
+                        <div class="about_product"> Действующим веществом жиросжигателя Asia . . .</div>
+                    </a>
+                    <a href="shop-8.html" class="square">
+                        <div class="slick_img"><img src="./assets/images/Shop/387546_1.jpg"></div>
+                        <h6>Syntha-6</h6>
+                        <div class="slick_text">Протеин
+                        </div>
+                        <div class="about_product"> Комбинированная биодобавка Синта-6 . . .</div>
+                    </a>
+                    <a href="shop-9.html" class="square">
+                        <div class="slick_img"><img
+                                src="https://img6.hkrtcdn.com/7758/prd_775755-ON-Optimum-Nutrition-Micronized-Creatine-Powder-Unflavoured-0.66-lb_o.jpg">
+                        </div>
+                        <h6>Creatine Powder
+                        </h6>
+                        <div class="slick_text">Креатин
+                        </div>
+                        <div class="about_product"> Каждая порция Creatine Powder от . . .</div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -550,7 +562,7 @@
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
                                     <ul>
-                                        <li><a href="index.html#">Business</a></li>
+                                        <li><a>Fitness</a></li>
                                         <li>October 13, 2018</li>
                                     </ul>
                                 </div>
@@ -561,11 +573,11 @@
                                             зал</a>
                                     </h3>
                                     <p>И теперь будет тренироваться в Gold Fitness .</p>
-                                    <a href="blog-details.html">Read more...</a>
+                                    <a href="#footer">Узнать больше . . .</a>
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
                                     <ul>
-                                        <li><a href="index.html#">Business</a></li>
+                                        <li><a>Fitness</a></li>
                                         <li>October 13, 2018</li>
                                     </ul>
                                 </div>
@@ -583,7 +595,7 @@
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
                                     <ul>
-                                        <li><a href="index.html#">Business</a></li>
+                                        <li><a>Fitness</a></li>
                                         <li>October 13, 2018</li>
                                     </ul>
                                 </div>
@@ -597,11 +609,11 @@
                                         the
                                         majority
                                         have suffered alteration</p>
-                                    <a href="blog-details.html">Read more...</a>
+                                    <a href="#footer">Узнать больше . . .</a>
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
                                     <ul>
-                                        <li><a href="index.html#">Business</a></li>
+                                        <li><a>Fitness</a></li>
                                         <li>October 13, 2018</li>
                                     </ul>
                                 </div>
@@ -612,30 +624,28 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img src="assets/images/blog/6.jpg" alt="">
+                            <img src="https://st2.depositphotos.com/2853475/7425/i/950/depositphotos_74259261-stock-photo-friends-in-a-gym.jpg"
+                                alt="">
                             <div class="blog-s-text">
                                 <div class="blog-content">
-                                    <h3>Недавно к нам приходил бла бла бла</h3>
+                                    <h3>Приводи друзей и получай скидку</h3>
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
                                     <ul>
-                                        <li><a href="index.html#">Business</a></li>
+                                        <li><a>Fitness</a></li>
                                         <li>October 13, 2018</li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="blog-text">
                                 <div class="blog-content blog-content2">
-                                    <h3><a href="blog-details.html">... записался в наш зал </a></h3>
-                                    <p>There are many variations of passages of Lorem Ipsum available, but
-                                        the
-                                        majority
-                                        have suffered alteration</p>
-                                    <a href="blog-details.html">Read more...</a>
+                                    <h3><a href="blog-details.html">Для тебя и твоих друзей </a></h3>
+                                    <p>Приведи троих друзей и получите скидку в виде 30%. </p>
+                                    <a href="#footer">Узнать больше . . .</a>
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
                                     <ul>
-                                        <li><a href="index.html#">Business</a></li>
+                                        <li><a>Fitness</a></li>
                                         <li>October 13, 2018</li>
                                     </ul>
                                 </div>
@@ -672,7 +682,7 @@
                                 Телефон:
                             </div>
                             <div class="text_2">
-                                +996 (554) 88 19 62
+                                +996 (505) 77 71 77
 
                             </div>
                         </div>
@@ -682,7 +692,7 @@
                             </div>
                             <div class="text_2">
 
-                                Spider@mail.ru
+                                Merkubov@gmail.com
                             </div>
                         </div>
                         <div class="col-md-4 ">
@@ -690,7 +700,7 @@
                                 Адресс:
                             </div>
                             <div class="text_2">
-                                ул.7 Апрель
+                                ул.7 Апрель, Выше Мадины
                             </div>
                         </div>
                     </div>
@@ -709,8 +719,7 @@
                                 Социальные сети:
                             </div>
                             <div class="footer_icons">
-                                <a href="#"> <i class="fa fa-facebook text_2"></i></a>
-                                <a href="#"> <i class="fa fa-instagram text_2"></i></a>
+                                <a href="https://www.instagram.com/gold_fitness_kg/"> <i class="fa fa-instagram text_2"></i></a>
                                 <a href="#"> <i class="fab fa-telegram text_2"></i></a>
                             </div>
                         </div>
