--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="team-single">
                         <div class="team-img">
-                            <img src="assets/images/team/1.jpg " alt="">
+                            <img src="assets/images/team/Webp.net-resizeimage.png " alt="">
                             <div class="social-1st">
                                 <ul>
                                     <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
