--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img src="assets/images/blog/5.jpg" alt="">
+                            <img src="https://avatars.mds.yandex.net/get-pdb/216365/287a3ca9-a6f8-459d-811c-3d71c05abc72/s1200" alt="">
                             <div class="blog-s-text">
                                 <div class="blog-content">
                                     <h3>Недавно к нам приходил бла бла бла</h3>
