--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="team-single">
                         <div class="team-img">
-                            <img src="assets/images/team/Webp.net-resizeimage.png " alt="">
+                            <img src="assets/images/team/photoeditorsdk-export.png " alt="">
                             <div class="social-1st">
                                 <ul>
                                     <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -497,7 +497,7 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="team-single">
                         <div class="team-img">
-                            <img src="assets/images/team/2.jpg" alt="">
+                            <img src="assets/images/team/1FA7FE41-CFAA-4850-9E1F-E07535A47175.jpeg" alt="">
                             <div class="social-1st">
                                 <ul>
                                     <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -555,7 +555,7 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img src="assets/images/blog/4.jpg" alt="">
+                            <img src="assets/images/blog/C0FA7ED4-9A18-443C-A16B-BB25DA46C39D.jpeg" alt="">
                             <div class="blog-s-text">
                                 <div class="blog-content">
                                     <h3>Недавно к нам приходил бла бла бла</h3>
