--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <ul class="d-flex header-social">
-                                   <!--  <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <!--  <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                     <li><a href="index.html#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                                     <li><a href="https://www.instagram.com/gold_fitness_kg/"><i class="fa fa-instagram"
                                                 aria-hidden="true"></i></a></li>
-                                   <!--  <li><a href="index.html#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                                    <!--  <li><a href="index.html#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                                     </li> -->
                                 </ul>
                             </div>
@@ -479,18 +479,18 @@
                             <img src="assets/images/team/photoeditorsdk-export.png " alt="">
                             <div class="social-1st">
                                 <ul>
-                                    <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                    </li>
+                                    <!-- <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                    </li> -->
                                     <li><a href="index.html#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                     </li>
-                                    <li><a href="index.html#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                    <li><a href="index.html#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                         <div class="team-content">
-                            <h4>Фурхат</h4>
-                            <span>Logistic Maneger</span>
+                            <h4>Мэр</h4>
+                            <span>Тренер</span>
                         </div>
                     </div>
                 </div>
@@ -511,7 +511,7 @@
                         </div>
                         <div class="team-content">
                             <h4>Фурхат</h4>
-                            <span>Packeging Maneger</span>
+                            <span>Тренер</span>
                         </div>
                     </div>
                 </div>
@@ -555,10 +555,11 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img src="assets/images/blog/C0FA7ED4-9A18-443C-A16B-BB25DA46C39D.jpeg" alt="">
+                            <img src="https://avatars.mds.yandex.net/get-pdb/216365/287a3ca9-a6f8-459d-811c-3d71c05abc72/s1200 "
+                                alt="">
                             <div class="blog-s-text">
                                 <div class="blog-content">
-                                    <h3>Недавно к нам приходил бла бла бла</h3>
+                                    <h3>Следите за новостями у нас в Instagram</h3>
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
                                     <ul>
@@ -569,11 +570,10 @@
                             </div>
                             <div class="blog-text">
                                 <div class="blog-content blog-content2">
-                                    <h3><a href="blog-details.html">Кто то из знаменитостей записался в наш
-                                            зал</a>
+                                    <h3><a>Следите за нашими новостями</a>
                                     </h3>
-                                    <p>И теперь будет тренироваться в Gold Fitness .</p>
-                                    <a href="#footer">Узнать больше . . .</a>
+                                    <p>Не пропустите скидки от Gold Fitness у на в Instagram</p>
+                                    <a href="https://www.instagram.com/gold_fitness_kg/">Наша инста</a>
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
                                     <ul>
@@ -588,28 +588,26 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img src="https://avatars.mds.yandex.net/get-pdb/216365/287a3ca9-a6f8-459d-811c-3d71c05abc72/s1200" alt="">
+                            <img src="assets/images/blog/C0FA7ED4-9A18-443C-A16B-BB25DA46C39D.jpeg" alt="">
                             <div class="blog-s-text">
                                 <div class="blog-content">
-                                    <h3>Недавно к нам приходил бла бла бла</h3>
+                                    <h3>Жоломан Шершенбеков и Gold Fitness</h3>
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
                                     <ul>
                                         <li><a>Fitness</a></li>
-                                        <li>October 13, 2018</li>
+                                        <li>May 22, 2019</li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="blog-text">
                                 <div class="blog-content blog-content2">
-                                    <h3><a href="blog-details.html">We can ensure you about the safe
-                                            delevery</a>
+                                    <h3><a > Жоломан Шаршенбеков тренируется в Gold
+                                            Fitness</a>
                                     </h3>
-                                    <p>There are many variations of passages of Lorem Ipsum available, but
-                                        the
-                                        majority
-                                        have suffered alteration</p>
-                                    <a href="#footer">Узнать больше . . .</a>
+                                    <p>Жоломан Шаршенбеков чемпион мира по гоеко-римской борьбе среди кадетов и
+                                        серебряный призёр среди взрослых</p>
+                                  <!--   <a href="#footer">Узнать больше . . .</a> -->
                                 </div>
                                 <div class="blog-content-sub blog-content-sub-2">
                                     <ul>
@@ -639,7 +637,7 @@
                             </div>
                             <div class="blog-text">
                                 <div class="blog-content blog-content2">
-                                    <h3><a href="blog-details.html">Для тебя и твоих друзей </a></h3>
+                                    <h3><a >Для тебя и твоих друзей </a></h3>
                                     <p>Приведи троих друзей и получите скидку в виде 30%. </p>
                                     <a href="#footer">Узнать больше . . .</a>
                                 </div>
@@ -666,7 +664,7 @@
                     <iframe class="container"
                         src="https://www.google.com/maps/d/embed?mid=12tbguV5yB2x00ZCPdjXyxVJcQF3vubdY" width="500"
                         height="360" style="border:none"></iframe>
-                    <!--  <iframe 
+                     <!-- <iframe 
                             class="container"
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d731.0456491350257!2d74.63685482918828!3d42.86898998160811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDUyJzA4LjQiTiA3NMKwMzgnMTQuNyJF!5e0!3m2!1sru!2skg!4v1555480963741!5m2!1sru!2skg"
                             width="500" height="360" frameborder="5px" style="border: none"
@@ -719,7 +717,8 @@
                                 Социальные сети:
                             </div>
                             <div class="footer_icons">
-                                <a href="https://www.instagram.com/gold_fitness_kg/"> <i class="fa fa-instagram text_2"></i></a>
+                                <a href="https://www.instagram.com/gold_fitness_kg/"> <i
+                                        class="fa fa-instagram text_2"></i></a>
                                 <a href="#"> <i class="fab fa-telegram text_2"></i></a>
                             </div>
                         </div>
@@ -739,8 +738,8 @@
         </div>
     </div>
     <div class="foot_copy">
-        © Copyrights 2019. Nasip Juma.
-        <!-- All Rights Reserved. -->
+        © Copyrights 2019.
+        All Rights Reserved Nasip Juma.
     </div>
 
 
