--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                                 <ul class="d-flex header-social">
                                     <!--  <li><a href="index.html#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                     <li><a href="index.html#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
-                                    <li><a href="https://www.instagram.com/gold_fitness_kg/"><i class="fa fa-instagram"
+                                    <li><a target="_blank"
+                                        href="https://www.instagram.com/gold_fitness_kg/"><i class="fa fa-instagram"
                                                 aria-hidden="true"></i></a></li>
                                     <!--  <li><a href="index.html#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                                     </li> -->
@@ -717,7 +718,7 @@
                                 Социальные сети:
                             </div>
                             <div class="footer_icons">
-                                <a href="https://www.instagram.com/gold_fitness_kg/"> <i
+                                <a target="_blank" href="https://www.instagram.com/gold_fitness_kg/"> <i
                                         class="fa fa-instagram text_2"></i></a>
                                 <a href="#"> <i class="fab fa-telegram text_2"></i></a>
                             </div>
