Animation on Photo

--- a/index.html
+++ b/index.html
@@ -218,21 +218,21 @@
                     <div class="img-container">
 
                         <a href="./assets/images/GoldImages/photo_2019-02-27_22-53-40.jpg"
-                            data-lightbox="mygallery"><img class="myImg"
+                            data-lightbox="mygallery"><img class="myImg img"
                                 src="./assets/images/GoldImages/photo_2019-02-27_22-53-40.jpg" /></a>
                     </div>
                 </div>
 
                 <div class="card col-md-4">
                     <div class="img-container">
-                        <a href="./assets/images/GoldImages/img.jpg" data-lightbox="mygallery"> <img class="myImg"
+                        <a href="./assets/images/GoldImages/img.jpg" data-lightbox="mygallery"> <img class="myImg img"
                                 src="./assets/images/GoldImages/img.jpg" /> </a>
                     </div>
                 </div>
 
                 <div class="card col-md-4">
                     <div class="img-container">
-                        <a href="./assets/images/GoldImages/img5.jpg" data-lightbox="mygallery"> <img class=" myImg"
+                        <a href="./assets/images/GoldImages/img5.jpg" data-lightbox="mygallery"> <img class=" myImg img"
                                 src="./assets/images/GoldImages/img5.jpg" /></a>
                     </div>
                 </div>
@@ -242,21 +242,21 @@
             <div class=" row abc">
                 <div class="card col-md-4 ">
                     <div class="img-container">
-                        <a href="./assets/images/GoldImages/img2.jpg" data-lightbox="mygallery"> <img class=" myImg"
+                        <a href="./assets/images/GoldImages/img2.jpg" data-lightbox="mygallery"> <img class=" myImg img"
                                 src="./assets/images/GoldImages/img2.jpg" /></a>
                     </div>
                 </div>
 
                 <div class="card col-md-4">
                     <div class="img-container">
-                        <a href="./assets/images/GoldImages/img3.jpg" data-lightbox="mygallery"> <img class=" myImg"
+                        <a href="./assets/images/GoldImages/img3.jpg" data-lightbox="mygallery"> <img class=" myImg img"
                                 src="./assets/images/GoldImages/img3.jpg" /></a>
                     </div>
                 </div>
 
                 <div class="card col-md-4">
                     <div class="img-container">
-                        <a href="./assets/images/GoldImages/img4.jpg" data-lightbox="mygallery"> <img class="myImg"
+                        <a href="./assets/images/GoldImages/img4.jpg" data-lightbox="mygallery"> <img class="myImg img"
                                 src="./assets/images/GoldImages/img4.jpg" /></a>
                     </div>
                 </div>
